# ray-tracer-v1

./: Bericht.odt  CMakeCache.txt  CMakeLists.txt  PoissonSamples.txt  RandomSamples.txt  Report.tex  StratifiedSamples3.txt  bg.xcf  script.sh  script2.sh  script3b.sh  toDoFrom21.12.txt
Latex/: Report.tex  gnuPlot
data/: HaltonSamples.txt  HaltonSamples4.txt  PoissonSamples2.txt  PoissonSamples3.txt  RandomSamples3.txt  StratifiedSamples.txt  StratifiedSamples2.txt  StratifiedSamples3.txt  (+3 more)
trunk/: CMakeLists.txt  RandomSamples2.txt  bg.xcf  script.sh  script3.sh  script3a.sh  toDoFrom21.12.txt
trunk/11.1/: toDoFrom11.1.txt
trunk/Latex/: Report.tex  ThingsINeed.txt  ThingsINeed.txt.txt  gnuPlot  times.txt
trunk/data/: HaltonSamples2.txt  HaltonSamples5.txt  PoissonSamples.txt  PoissonSamples2.txt  PoissonSamples3.txt  PoissonSamples4.txt  RandomSamples.txt  RandomSamples2.txt  RandomSamples3.txt  RandomSamples4.txt  StratifiedSamples.txt  StratifiedSamples2.txt  gnuplot
trunk/models/: lamp.blend  lamp2.blend1  lamp2.mtl  lamp3.blend
trunk/ray-tracer-v2/: README.txt
trunk/ray-tracer-v2/src/: MyMatrix.cpp  MyMatrix.h  MyVector.cpp  RayTracer.h  SceneObject.cpp  SceneObject.h  Sphere.cpp  Triangle.h
trunk/src/: AABB.cpp  AABB.h  BVH.cpp  BVH.h  Box.cpp  Box.h  Cylinder.cpp  Cylinder.h  Light.cpp  Light.h  Main.cpp  Plane.cpp  Plane.h  Ray.h  RayTracer.cpp  RayTracer.h  SceneGraph.cpp  SceneGraph.h  SceneObject.h  Sphere.cpp  Sphere.h  TODO.txt  Triangle.cpp  Triangle.h  Viewer.cpp  Viewer.h  kdTree.cpp  kdTree.h  kdTree2.cpp  kdTree2.h  myUtil.cpp  myUtil.h
(+42 files in other folders)
